--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,10 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-react": "^2.2.0",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.1",
+        "@vitejs/plugin-react": "^4.0.0",
+        "@vitejs/plugin-react-refresh": "^1.3.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
